cmake_minimum_required( VERSION 3.0 )
project( Sandbox )

set( CMAKE_CXX_STANDARD 14)
set( CMAKE_CXX_STANDARD_REQUIRED ON )
if ( MSVC )
    add_compile_options( "/std:c++14" )
else()
    add_compile_options( -std=c++14 )
endif()

option( BUILD_SANDBOX_OPENGL OFF )
option( BUILD_SANDBOX_BOOST_TEST OFF )
option( BUILD_SANDBOX_GOOGLE_TEST OFF )
option( BUILD_SANDBOX_CATCH2 OFF )
option( BUILD_SANDBOX_ECS OFF )

if ( ${BUILD_SANDBOX_OPENGL} )
    add_subdirectory( OpenGL )
endif()
if ( ${BUILD_SANDBOX_BOOST_TEST} )
    add_subdirectory( Boost.Test )
endif()
if ( ${BUILD_SANDBOX_GOOGLE_TEST} )
    add_subdirectory( Google.Test )
endif()
if ( ${BUILD_SANDBOX_CATCH2} )
    add_subdirectory( Catch2 )
endif()
if ( ${BUILD_SANDBOX_ECS} )
    add_subdirectory( ECS )
endif()
